[tool.poetry]
name = "tkeeper-backend"
version = "0.1.0"
description = ""
authors = ["Mateusz <morveusz93@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.88.0"}
SQLAlchemy = "^1.4.46"
httpx = "^0.23.3"
pytest = "^7.2.1"
black = "^23.1.0"
pytest-black = "^0.3.12"
pytest-isort = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
